add FavoritesComponent.tsx & FavoriteComponent.tsx Create FavoritesPage.tsx

--- a/src/styles/PokemonComponent.css
+++ b/src/styles/PokemonComponent.css
@@ -4,6 +4,11 @@
     align-items: center;
 }
 
+.pokemon-image {
+    width: 300px;
+    height: 300px;
+}
+
 .san-container {
     display: flex;
     flex-direction: row;
