--- a/src/styles/PokemonComponent.css
+++ b/src/styles/PokemonComponent.css
@@ -15,11 +15,14 @@
     flex-wrap: wrap;
 }
 
-.pokemon-forms-container {
-    width: 100vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.pokemon-title {
+    font-family: Roboto, sans-serif;
+    font-size: 3rem;
+    color: blueviolet;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-transform: capitalize
 }
 
 .forms-button {
@@ -44,5 +47,27 @@
 .forms-button:hover {
     background-color: #2980b9;
 }
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.modal-content {
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+
 
 
